Fix style spacing for all shop, journal, and find-us pages

--- a/themes/inhabitant/sass/_elements.scss
+++ b/themes/inhabitant/sass/_elements.scss
@@ -12,7 +12,7 @@ html {
   margin-right: auto;
   width: 1120px;
 }
-body.blog, body.post-template-default, body.page-template-default, body.search-results{
+body.blog, body.post-template-default, body.page-template-default, body.search-results, body.date {
 .site-content {
   margin-left: auto;
   margin-right: auto;
