--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -17,7 +17,7 @@ article.post {
     margin-bottom: 24px;
 }
 
-.blog .site-main, .single-post {
+.blog .site-main, .single-post, .date .site-main {
     .entry-header {
         position: relative;
         img {
@@ -67,6 +67,7 @@ article.post {
         }
     }
     .entry-content {
+        margin-bottom: 72px;
         p {
             margin-bottom: 1.5rem;
             font-family: 'Merriweather-Light', serif;
@@ -150,6 +151,7 @@ article.post {
     }
     .entry-content {
         width: 72%;
+        margin-bottom: 0;
     }
 }
 
@@ -297,7 +299,7 @@ h2.comments-title {
 
 /* Archive */
 
-.archive .site-main {
+.post-type-archive .site-main, .tax-product_type .site-main {
     padding-top: 14px;
     header {
         text-align: center;
